[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sounds/revisedSpawnMusic/hats.wav" type="AudioStream" id=1]
[ext_resource path="res://Sounds/revisedSpawnMusic/piano_bass.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Scripts/Level.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Foreground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/revisedSpawnMusic/shaker.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/revisedSpawnMusic/sax.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/revisedSpawnMusic/rim.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/revisedSpawnMusic/snare_kick.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/revisedSpawnMusic/arp_bells.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/revisedSpawnMusic/guitar.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/spawnSound.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 57 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float speed;

void fragment() {
	vec2 texture_map = UV;
	texture_map.x += speed * TIME;
	vec4 color = texture(TEXTURE, texture_map);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/speed = 0.4

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 512, 543 )
shape = SubResource( 1 )

[node name="ScrollingTexture" parent="Floor" instance=ExtResource( 4 )]
material = SubResource( 3 )
margin_left = -188.0
margin_top = 450.0
margin_right = 1265.0
margin_bottom = 531.0
rect_scale = Vector2( 3, 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]
spd = 20

[node name="ParallaxBackground2" parent="." instance=ExtResource( 6 )]
spd = 50

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Sprite Positions" type="Node2D" parent="."]

[node name="CharecterContainer" type="Node" parent="."]

[node name="LevelBackGroundMusic" type="AudioStreamPlayer" parent="."]
autoplay = true
mix_target = 2

[node name="Arp_Bells" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 11 )
volume_db = -80.0
autoplay = true

[node name="Guitar" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 12 )
volume_db = -80.0
autoplay = true

[node name="Hats" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 1 )
volume_db = -80.0
autoplay = true

[node name="Piano_Bass" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 2 )
autoplay = true

[node name="Rim" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 9 )
volume_db = -80.0
autoplay = true

[node name="Sax" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 8 )
volume_db = -80.0
autoplay = true

[node name="Shaker" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true

[node name="Snare_Kick" type="AudioStreamPlayer" parent="LevelBackGroundMusic"]
stream = ExtResource( 10 )
volume_db = -80.0
autoplay = true

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -12.0

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_PlayerTimer_timeout"]
[connection signal="finished" from="LevelBackGroundMusic" to="." method="_on_LevelBackGroundMusic_finished"]
